<resources>
    <string name="app_name">Password Manager</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="msg_no_accounts">No account found!</string>
    <string name="lbl_new_account_title">New Account</string>
    <string name="hint_enter_account">Enter your title!</string>
    <string name="hint_enter_password">Enter your password!</string>
    <string name="lbl_edit_account_title">Edit Account</string>
    <string name="user_id">USER_ID</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Password Manager</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
</resources>