<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_account_title"
        android:textColor="@color/myColor"
        android:textSize="@dimen/lbl_new_account_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/titleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myColor"
        android:gravity="top"
        android:padding="6dp"
        android:textColorHint="#3a5a72"
        android:textColor="@color/white"
        android:hint="@string/hint_enter_account"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="@dimen/input_new_account" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/passwordDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myColor"
        android:gravity="top"
        android:padding="6dp"
        android:textColorHint="#3a5a72"
        android:textColor="@color/white"
        android:hint="@string/hint_enter_password"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="@dimen/input_new_account" />

</LinearLayout>